--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("./wrallpaperflare.com_wallpaper.jpg");
+    background-image: url("/images/wrallpaperflare.com_wallpaper.jpg");
     display: flex;
     flex-direction: column;
     justify-content: center;
