--- a/styles/style.css
+++ b/styles/style.css
@@ -44,7 +44,7 @@ select {
     justify-content: center;
 }
 
-#countriesContainer {
+#countries-container {
     display: grid;
     grid-template-columns: 1fr 0.1fr;
     gap: 1rem;
@@ -69,7 +69,7 @@ img {
     height: 2rem;
 }
 
-#countriesFacts {
+#countries-facts {
     height: fit-content;
     padding: 1rem;
     border: solid;
